--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </tr>
                 <tr>
                     <td>git clone url</td>
-                    <td>-</td>
+                    <td>Clone a repository into a new directory from url</td>
                 </tr>
                 <tr>
                     <td>git add file</td>
