--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td>git add file</td>
-                    <td>-</td>
+                    <td>Adds content from file</td>
                 </tr>
                 <tr>
                     <td>git add .</td>
