Add add. subscr

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </tr>
                 <tr>
                     <td>git add .</td>
-                    <td>-</td>
+                    <td>Adds all files under version control</td>
                 </tr>
                 <tr>
                     <td>git commit -m "comment"</td>
@@ -55,7 +55,7 @@
                 </tr>
                 <tr>
                     <td>git log</td>
-                    <td>-</td>
+                    <td>View existing commits</td>
                 </tr>
                 <tr>
                     <td>git branch branch_name</td>
