add git commit -m subscr

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </tr>
                 <tr>
                     <td>git commit -m "comment"</td>
-                    <td>-</td>
+                    <td>Use the given "comment" as the commit message</td>
                 </tr>
                 <tr>
                     <td>git commit -a -m "comment"</td>
