add git commit -a -m "comment subscr

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </tr>
                 <tr>
                     <td>git commit -a -m "comment"</td>
-                    <td>-</td>
+                    <td>commit all files with "comment"</td>
                 </tr>
                 <tr>
                     <td>git push url</td>
