add git push url subscr

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td>git add file</td>
-                    <td>Adds content from file</td>
+                    <td>Adds contents from file under version control</td>
                 </tr>
                 <tr>
                     <td>git add .</td>
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td>git push url</td>
-                    <td>-</td>
+                    <td>uplodes repository to url</td>
                 </tr>
                 <tr>
                     <td>git status</td>
