--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </tr>
                 <tr>
                     <td>git checkout branch_name</td>
-                    <td>-</td>
+                    <td>view branch</td>
                 </tr>
                 <tr>
                     <td>git checkout -b branch_name</td>
