fix add and checkout subscr

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 </tr>
                 <tr>
                     <td>git checkout branch_name</td>
-                    <td>view branch</td>
+                    <td>Updates files in the working tree to match the version in the index or the specified tree</td>
                 </tr>
                 <tr>
                     <td>git checkout -b branch_name</td>
-                    <td>-</td>
+                    <td>Specifying -b causes a new branch to be created </td>
                 </tr>
                 <tr>
                     <td>git remote</td>
